# desafio_autorizador

./: .commitlintrc.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  package.json  pyproject.toml
.husky/_/: husky.sh
desafio_autorizador/: main.py  pyproject.toml
desafio_autorizador/models/: account.py  deny_merchants.py  transaction.py
tests/: test_account.py  test_transatcion.py
