[project]
name = "desafio-autorizador"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
desafio-autorizador = "main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"